🔧 Fixes an issue with overflow scrollbars in non-firefox browsers 🔧

--- a/src/style.css
+++ b/src/style.css
@@ -224,6 +224,11 @@ h1 {
 .overflow-hidden {
     overflow: scroll;
     scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.overflow-hidden::-webkit-scrollbar {
+    display: none;
 }
 
 .text-nowrap {
